# fms-io-bridge

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
example/node-client/: main.ts
example/node-client/proto/fms/gps/v1/: gps.proto
example/node-client/scripts/: proto-codemod.ts
examples/: baudrate_checker.rs  gps_parser.rs  gpsd_test.rs  serial_list.rs  ublox_cli.rs
examples/node-client/: deno.json
examples/node-client/proto/fms/: fms.proto
examples/node-client/scripts/: fetch-proto.ts  generate.ts
examples/node-client/types/: fms.ts
examples/node-client/types/fms/gps/v1/: GPS.ts  LatLngRequest.ts  LatLngResponse.ts
proto/fms/gps/v1/: gps.proto
src/: args_match.rs  gps_ublox.rs  grpc_service.rs  logger.rs  main.rs  serial_list.rs  serial_reader.rs  serialport_handle.rs  ubx_nav_pvt_parser.rs
