[package]
name = "fms-io-bridge"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "start"
# path = "src/main.rs"

[[bin]]
name = "dev"
path = "src/main.rs"

[[example]]
name = "ublox_cli"

[[example]]
name = "serial_list"

[[example]]
name = "gpsd_test"

[[example]]
name = "baudrate_checker"

[[example]]
name = "gps_parser"

[dependencies]
chrono = "0.4.39"
clap = "4.5.30"
env_logger = "0.11.6"
flexi_logger = { version = "0.29.8", features = ["async"] }
gpsd_proto = "1.0.0"
itertools = "0.14.0"
log = "0.4.26"
nmea = "0.7.0"
prost = "0.13.5"
serialport = { version="4.7.0", default-features = false }
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tonic-web = "0.12.3"
ublox = "0.4.5"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.dev]
opt-level = 3
debug = true

[build-dependencies]
tonic-build = "0.12.3"

[target.aarch64-unknown-linux-gnu]
linker = "rust-lld"
